# ggukhub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-dspy.txt  requirements-llm.txt  requirements.txt
app/: main.py  run_api.py  run_bot.py  run_stack.py
app/bitrix/: __init__.py  client.py  connector.py  formatters.py  models.py  payloads.py  service.py  webhooks.py
app/config/: settings.py
app/core/: bootstrap.py  buildings.py  category_resolution.py  classifier.py  db.py  enums.py  llm_category.py  logging_setup.py  models.py  notifier.py  process_lock.py  regulation.py  runtime.py  schemas.py  services.py  storage.py  tariffs.py  telemetry.py  utils.py
app/incidents/: __init__.py  detector.py  service.py
app/max/: client.py  keyboards.py  notifier.py  operator.py  operator_polling.py  polling.py
app/prompts/: examples.json  system.dspy.txt  system.txt
app/responders/: __init__.py  base.py  factory.py  llm_responder.py  models.py  (+1 more)
data/: categories.json  housing_complexes.json  tariffs.json
scripts/: generate_system_prompt_dspy.py  sync_langfuse_repos.ps1  sync_prompt_to_langfuse.py
tests/: test_app_factory.py  test_bitrix_client.py  test_bitrix_extended.py  test_bitrix_payloads.py  test_bitrix_ticket_flow.py  test_bitrix_webhook_max.py  test_bug_fixes.py  test_classifier.py  test_classifier_large_matrix.py  test_concurrency_load.py  test_dialog_category_text_inputs.py  test_dialog_classification.py  test_dialog_finalization.py  test_dialog_next_missing_step.py  test_dialog_phone_policy.py  test_dialog_phone_reuse_and_status.py  test_dialog_voice_idle_flow.py  test_extractors.py  test_incident_detector.py  test_jk_keyboard.py  test_langfuse_10_scenarios_live.py  test_langfuse_live.py  test_llm_category_optional_deps.py  test_llm_category_resolver.py  test_llm_responder_qwen.py  test_max_polling.py  test_phrases.py  test_problem_text_validation.py  test_report_audit_log.py  test_responder_factory.py  test_settings_llm.py  test_speech_client.py  test_state_machine_semantics.py  test_telegram_bot_ui.py
(+26 files in other folders)
