[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "green-garden-uk-assistant"
version = "0.1.0"
description = "Telegram and FastAPI assistant for Green Garden UK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.13.1",
  "aiosqlite>=0.20.0",
  "fastapi>=0.123.5",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]
speech = [
  "faster-whisper>=1.1.1",
]
llm = [
  "langfuse>=3.10.1 ; python_version >= '3.12'",
  "pydantic-ai @ git+https://gitea.green-garden.ru/ai-department/pydantic-ai.git ; python_version >= '3.12'",
  "pydantic-ai-langfuse-extras @ git+https://gitea.green-garden.ru/ai-department/pydantic-ai-langfuse-extras.git ; python_version >= '3.12'",
]
dspy = [
  "dspy-ai==3.1.3",
  "openai==2.24.0",
  "python-dotenv==1.2.1",
]

[project.scripts]
green-garden-api = "app.run_api:main"
green-garden-bot = "app.run_bot:main"
green-garden-stack = "app.run_stack:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
