[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "green-garden-uk-assistant"
version = "0.1.0"
description = "Telegram and FastAPI assistant for Green Garden UK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.13.1",
  "aiosqlite>=0.20.0",
  "fastapi>=0.123.5",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]
speech = [
  "faster-whisper>=1.1.1",
]

[project.scripts]
green-garden-api = "app.run_api:main"
green-garden-bot = "app.run_bot:main"
green-garden-stack = "app.run_stack:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
